tests/purs/failing/StandaloneKindSignatures2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/StandaloneKindSignatures2.purs:8:35 - 8:36 (line 8, column 35 - line 8, column 36)

  Could not match kind
  [33m    [0m
  [33m  k2[0m
  [33m    [0m
  with kind
  [33m    [0m
  [33m  k1[0m
  [33m    [0m

while checking that type [33mb[0m
  has kind [33mk1[0m
while inferring the kind of [33mPair a b[0m
in type constructor [33mPair'[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

